# solr-metal

./: .gitignore  .solr-metal.example.toml  CONTRIBUTING.md  README.md  RELEASING.md  Taskfile.yml  mkdocs.yml  pyproject.toml
.github/scripts/: check_release_tag.py
.github/workflows/: ci.yml  release.yml
catalog/definitions/smoke/: route-reachability.yaml
catalog/examples/: custom-route-check.yaml
catalog/python/: check_route.py
docs/: architecture.md  developer-guide.md  distribution.md  index.md  user-guide.md
src/solr_metal/: __init__.py  __main__.py  artifacts.py  builtins.py  cli.py  console.py  durations.py  engine.py  errors.py  kube.py  models.py  registry.py  reports.py  settings.py  versioning.py
src/solr_metal/catalog/: __init__.py
src/solr_metal/catalog/definitions/health/: openshift-version.yaml
src/solr_metal/catalog/definitions/smoke/: route-reachability.yaml
src/solr_metal/catalog/python/: __init__.py
src/solr_metal/templates/: report.html.j2
tests/: test_engine.py  test_registry.py  test_reports.py  test_settings.py  test_versioning.py
