[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "solr-metal"
version = "0.1.0"
description = "A Python-first CLI for Kubernetes and OpenShift bare-metal cluster validation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Netanel" }
]
keywords = ["kubernetes", "openshift", "cluster", "validation", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "durationpy>=0.9",
  "jinja2>=3.1.4",
  "junitparser>=3.2.0",
  "kubernetes>=31.0.0",
  "platformdirs>=4.3.6",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "pyyaml>=6.0.2",
  "rich>=13.9.4",
  "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.5.44",
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "ruff>=0.7.2",
]

[project.scripts]
sm = "solr_metal.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/solr_metal"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
plugins = []

[tool.uv]
package = true
